@@ -22,6 +22,11 @@ version 0.8.9 - Not released, available at https://simupop.svn.sourceforge.net/s
         and population::setRelativeIndex to this class.
   - CHG: Temporarily disable all pedigree related features such as pedigree parent
         chooser, pedigree mating scheme, and all samplers.
+  - CHG: Rename population::useAncestralPop to population::useAncestralGen.
+  - CHG: Replace population::mergePopulation by population::addIndFromPop.
+  - CHG: Replace population::mergePopulationByLoci by population::addChromFromPop
+		and population::addLociFromPop.
+  - CHG: Remove removeEmptySubPops parameter from population::mergeSubPops.
 
 
 version 0.8.8 - (Rev 1787) Oct 24, 2008
